--- a/style.css
+++ b/style.css
@@ -1,5 +1,23 @@
-button {
+html {
         background-color: black;
-        color: green;
-        cursor: pointer;
+        height: 100%;
     }
+
+body {
+    color: rgb(62, 253, 189);
+}
+
+canvas {
+    position:absolute;
+    left:0;
+    top:0;
+    z-index:-1;
+}
+
+h1 {
+    text-align: center;
+    font-family: 'Source Code Pro', monospace;
+    background-color: black;
+}
+
+
