--- a/style.css
+++ b/style.css
@@ -1,23 +1,26 @@
 html {
         background-color: black;
-        height: 100%;
     }
 
-body {
-    color: rgb(62, 253, 189);
-}
 
 canvas {
     position:absolute;
-    left:0;
-    top:0;
-    z-index:-1;
+    z-index: -1;
+    top: 0;
+    opacity: 0.35;
+}
+
+body
+{
+    opacity: 1;
 }
 
 h1 {
     text-align: center;
+    color: white;
+    text-shadow: -0.2px 0 #0f0, 0 0.2px #0f0, 0.2px 0 #0f0, 0 -0.2px #0f0;
     font-family: 'Source Code Pro', monospace;
-    background-color: black;
+
 }
 
 
