--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ h1 {
   background: #EAC118;
   padding: 0 25px;
   text-decoration: none;
-  line-height: 42px;
+  line-height: 44px;
   text-transform: uppercase;
   font-family: Arial;
   color: #ffffff;
@@ -61,28 +61,28 @@ h1 {
   height: 0;
   z-index: 1;
   border-style: solid;
-  border-width: 21px 0px 21px 20px;
+  border-width: 22px 0px 22px 20px;
   border-color: transparent transparent transparent #EAC118;
 }
 
 .shadow {
   position: absolute;
-  top: 5px;
+  top: 4px;
   left: 5px;
   bottom: -5px;
   right: -5px;
   z-index: -1;
-  background: #2ecbff;
+  background: #22d5a8f9;
 }
 
 .shadow::after {
-  border-color: #000 #000 #000 #2ecbff;
-  left: calc(100% - 3px);
+  border-color: #000 #000 #000 #22d5a8f9;
+  left: calc(100% - 4px);
   z-index: 1;
 }
 
 .shadow::before {
-  border-color: transparent transparent transparent #2ecbff;
+  border-color: transparent transparent transparent #22d5a8f9;
   bottom: 5px;
   z-index: 2;
 }
@@ -92,7 +92,7 @@ h1 {
   width: 5px;
   height: 5px;
   border-top: 5px solid #000;
-  background: #2ecbff;
+  background: #1fc99fb4;
   position: absolute;
   top: -5px;
   right: -3px;
