--- a/style.css
+++ b/style.css
@@ -35,6 +35,14 @@ h1 {
     color: white;
 }
 
+#contact-container {
+  font-family: 'Source Code Pro', monospace;
+  font-size: 15px;
+  white-space: nowrap;
+  overflow: hidden;
+  color: white;
+}
+
 .btn,
 .shadow {
   display: inline-block;
