--- a/style.css
+++ b/style.css
@@ -38,6 +38,19 @@ h2 {
   font-family: 'Source Code Pro', monospace;
 }
 
+main {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.about-me,
+.contact-info {
+  flex: 1;
+  padding: 20px;
+}
+
+
 #text-container {
     font-family: 'Source Code Pro', monospace;
     font-size: 17px;
